--- a/DBD_ass1_ex1.csproj
+++ b/DBD_ass1_ex1.csproj
@@ -5,4 +5,18 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="test_sqlite_db.db" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="test_sqlite_db.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.112" />
+  </ItemGroup>
+
 </Project>
